--- a/package.json
+++ b/package.json
@@ -1,28 +1,48 @@
 {
   "name": "servant",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "prettier": "prettier \"src/**/*.ts\" --check",
-    "prettier:fix": "prettier \"src/**/*.ts\" --write"
+    "prettier:fix": "prettier \"src/**/*.ts\" --write",
+    "start": "node dist/index.js",
+    "build": "npm run build:clean && npm run build:compile",
+    "build:start": "npm run build && npm run start",
+    "build:clean": "rimraf dist/",
+    "build:compile": "tsc",
+    "watch": "concurrently \"npm run watch:compile\" \"npm run watch:start\"",
+    "watch:compile": "tsc --watch",
+    "watch:start": "node --watch dist/"
   },
   "keywords": [],
   "author": "",
   "license": "Apache-2.0",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
+    "@discordx/utilities": "^7.0.5",
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
+    "concurrently": "^9.2.0",
+    "dotenv": "^17.2.1",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
+    "tsyringe": "^4.10.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0"
+  },
+  "dependencies": {
+    "@discordx/importer": "^1.3.3",
+    "discord.js": "^14.21.0",
+    "discordx": "^11.12.5"
   }
 }
