--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:start:nodb": "npm run build ; npm run start",
     "build:clean": "rimraf dist/",
     "build:compile": "tsc",
-    "watch": "tsx --watch ./src/"
+    "watch": "NODE_ENV=development tsx --watch ./src/",
+    "test": "NODE_ENV=test tsx --test"
   },
   "keywords": [
     "bot",
@@ -29,7 +30,6 @@
     "@discordx/utilities": "^8.0.0",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.5.0",
-    "@types/pg": "^8.15.5",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.46.0",
     "concurrently": "^9.2.1",
@@ -48,9 +48,9 @@
   },
   "dependencies": {
     "@discordx/importer": "^1.3.3",
+    "@libsql/client": "^0.15.15",
     "discord.js": "^14.22.1",
     "discordx": "^11.13.2",
-    "drizzle-orm": "^0.44.5",
-    "pg": "^8.16.3"
+    "drizzle-orm": "^0.44.5"
   }
 }
