--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,5 +43,5 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "drizle.config.ts"]
 }
